tests/baselines/reference/unusedVariablesinForLoop3.errors.txt
tests/cases/compiler/unusedVariablesinForLoop3.ts(2,16): error TS6133: 'elem' is declared but its value is never read.


==== tests/cases/compiler/unusedVariablesinForLoop3.ts (1 errors) ====
    function f1 () {
        for (const elem of ["a", "b", "c"]) {
                   ~~~~
!!! error TS6133: 'elem' is declared but its value is never read.
    
        }
    }